--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -6,14 +6,12 @@
         <button nz-button class="print-btn" nzType="primary" (click)=" sendFile()" [nzLoading]="spinnerIsVisible"><i nz-icon nzType="send" nzTheme="outline"></i></button>
     </div>
 </div>
-<br>
 <hr>
 <div id="content">
     <div class="cabecera">
         <!-- <img style="width: 50px;" [src]="" alt="Cliente"> -->
         <h2> {{dataInvoice.contrato.cliente}} </h2>
     </div>
-    <br>
     <div class="body">
         <div class="titulos">
             <h5>Datos de factura</h5>
@@ -74,7 +72,6 @@
                 <p class="etiqueta-valor" *ngIf="dataInvoice.cargo"> {{dataInvoice.cargo[dataInvoice.cargo.length -1].valorAjustado   | number:'1.2-2':'en-US'}}</p>
             </div>
         </div>
-        <br>
         <div class="titulos">
             <h5>Detalle de consumo de energía</h5>
         </div>
@@ -172,195 +169,198 @@
                 </table>
             
         </div>
-        <br>
 
+</div>
+</div>
+
+<div id="pag2">
  
-<div class="titulos" *ngIf="dataInvoice.cargo">
-    <h5>Detalle cliente regulado</h5>
-    <h5>Historico consumo</h5>
-</div>       
-        
-<div class="consumo-container" *ngIf="dataInvoice.cargo">
-<div class="calculo-consumo-container">
-    <div>
-        <!-- <table class="table table-bordered table-sm">
-            <thead>
-                <tr>
-                    <th scope="col">Cargo</th>
-                    <th scope="col">L/kWh</th>
-                    <th scope="col">Consumo</th>
-                    <th scope="col">Valor(L.)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <p style="margin: 0px;">Activa</p>
-                    </td>
-                    <td> xxxx </td>
-                    <td> xxxx </td>
-                    <td> xxxx </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p style="margin: 0px;">Reactiva</p>
-                    </td>
-                    <td> xxx </td>
-                    <td> xxx </td>
-                    <td> xxx </td>
-                </tr>
-            </tbody>
-        </table> -->
-        <div style="background-color:  #969696; text-align: center;">
-            <h6>Ajuste por factor de potencia</h6>
-        </div>
-        <p style="color: black; font-size: 17px; margin: 0% 0% 1% 0%; font-weight: bold;"> Factor de potencia medio
-        </p>
-        <div style="position: relative;">
-            <p class="formula-dividendo"> {{dataInvoice.totalLecturaActivaAjustada | number:'1.2-2':'en-US'}} </p>
-            <p class="formula-divisor1"> {{dataInvoice.totalLecturaActivaAjustada  | number:'1.2-2':'en-US'}} <sup>2</sup> </p>
-            <p class="mas"> + </p>
-            <p class="formula-divisor2"> {{dataInvoice.totalLecturaReactivaAjustada | number:'1.2-2':'en-US'}} <sup>2</sup> = </p>
-            <p class="resultado-factor"> {{ dataInvoice.FPTotal * 100 | number:'1.2-2':'en-US'}} % </p>
-            <img class="img-formula" src="assets/raiz.svg">
-
-        </div>
-        <p style="    color: black; font-size: 17px; margin: 2% 0% 1% 0%; font-weight: bold;"> Penalización reactiva
-        </p>
-        <p class="formula-penalidad" > {{dataInvoice.PCFRTotal * 100 | number:'1.2-2':'en-US'}}% = 
-            <span class="resultado-penalidad" *ngIf="dataInvoice.cargo; else sinPenalizacion">
-                L {{ dataInvoice.cargo[dataInvoice.cargo.length -2].valorAjustado | number:'1.2-2':'en-US'}}
-            </span> 
-            <ng-template #sinPenalizacion>
-                <span class="resultado-penalidad">
-                    L {{ 0 }}
-                </span> 
-
-            </ng-template>
+    <div class="titulos" *ngIf="dataInvoice.cargo">
+        <h5>Detalle cliente regulado</h5>
+        <h5>Historico consumo</h5>
+    </div>       
             
-        </p>
-            
-        <div style="background-color:  #969696; text-align: center;">
-            <h6>Distribucion de cargos por consumo energetico</h6>
-        </div>
-
-            <div class="contenedor-cliente-regulado">
-                
-                <div>
-                    <p *ngFor="let data of dataInvoice.cargo" class="datos-cliente-regulado"> 
-                        <span *ngIf="data.nombre != 'Total'">
-                            {{data.nombre}}
-                        </span>
-                        
-                    </p>
-        
-                </div>
-                <div>
-                    <p *ngFor="let data of dataInvoice.cargo" class="datos-cliente-regulado" style="justify-content: right;">
-                        <span *ngIf="data.nombre != 'Total'">
-                            L {{data.valorAjustado  | number:'1.2-2':'en-US'}} 
-                        </span>
-                    </p>
-                </div>
-            </div>
-            <div class="contenedor-cliente-regulado" style="background-color: #b9b9b9; font-weight: bold;">
-                <div>
-                    <p class="datos-cliente-regulado"> 
-                        <span>
-                            Total
-                        </span>
-                        
-                    </p>
-        
-                </div>
-                <div>
-                    <p class="datos-cliente-regulado" style="justify-content: right;">
-                        <span>
-                        L {{dataInvoice.cargo[dataInvoice.cargo.length -1].valorAjustado   | number:'1.2-2':'en-US'}}
-
-                        </span>
-                    </p>
-                </div>
-
-            </div>
-    </div>
-
-</div>
-
-<div class="historico-consumo-container">
-
-    <div style="background-color: #b9b9b9; margin: 1% 3% 1% 3%;">
-        <fusioncharts width="100%" height="100%" type="scrollstackedcolumn2d" [dataSource]="dataSource">
-        </fusioncharts>
-    </div>
-    <div style="background-color: #b9b9b9; margin: 0% 3% 0% 3%;">
-        <p class="totales-historico">
-            <span> Promedio de consumo energía activa:</span>
-            <span> {{dataSource.promedioConsumo | number:'1.2-2':'en-US' }} kWh </span>
-        </p>
-        <!-- <p class="totales-historico">
-            <span> Promedio de consumo energia reactiva:</span>
-            <span> {{dataSource.promedioConsumo | number:'1.2-2':'en-US' }} kWh </span>
-        </p> -->
-    </div>
-</div>
-    
-</div>
-</div>
-
-
- 
-<div class="titulos" *ngIf="dataInvoice.cargo">
-    <h5>Origen de la energía</h5>
-</div>  
-
-<div class="origen-container"  *ngIf="dataInvoice.cargo">
-
-    <div class="origen-energia">
+    <div class="consumo-container" *ngIf="dataInvoice.cargo">
+    <div class="calculo-consumo-container">
         <div>
-            <table class="origen-table" style="table-layout: fixed; width: 100%">
-            <thead>
-              <tr>
-                <th class="tg-ifil">Origen</th>
-                <th class="tg-ifil">Energía</th>
-                <th class="tg-ifil">Precio de la energía</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="tg-g6p1">Generación solar</td>
-                <td class="tg-8jgo">{{dataInvoice.CEFTotal / dataInvoice.PBE  | number:'1.2-2':'en-US' }} kWh</td>
-                <td class="tg-8jgo">L {{dataInvoice.CEFTotal | number:'1.2-2':'en-US' }}</td>
-              </tr>
-              <tr>
-                <td class="tg-g6p1">Energía EEH</td>
-                <td class="tg-8jgo">{{ dataInvoice.totalLecturaActivaAjustada  | number:'1.2-2':'en-US' }} kWh</td>
-                <td class="tg-8jgo">L {{ dataInvoice.cargo[dataInvoice.cargo.length - 1].valorAjustado -  dataInvoice.CEFTotal| number:'1.2-2':'en-US' }}</td>
-              </tr>
-              <tr>
-                <td class="tg-g6p1">Total Consumo</td>
-                <td class="tg-8jgo totales-tablas">{{ dataInvoice.totalLecturaActivaAjustada  +  (dataInvoice.CEFTotal / dataInvoice.PBE) | number:'1.2-2':'en-US' }} kWh</td>
-                <td class="tg-8jgo totales-tablas">L {{ dataInvoice.cargo[dataInvoice.cargo.length - 1].valorAjustado  | number:'1.2-2':'en-US'}}</td>
-              </tr>
-            </tbody>
-            </table>
+            <!-- <table class="table table-bordered table-sm">
+                <thead>
+                    <tr>
+                        <th scope="col">Cargo</th>
+                        <th scope="col">L/kWh</th>
+                        <th scope="col">Consumo</th>
+                        <th scope="col">Valor(L.)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <p style="margin: 0px;">Activa</p>
+                        </td>
+                        <td> xxxx </td>
+                        <td> xxxx </td>
+                        <td> xxxx </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p style="margin: 0px;">Reactiva</p>
+                        </td>
+                        <td> xxx </td>
+                        <td> xxx </td>
+                        <td> xxx </td>
+                    </tr>
+                </tbody>
+            </table> -->
+            <div style="background-color:  #969696; text-align: center;">
+                <h6>Ajuste por factor de potencia</h6>
+            </div>
+            <p style="color: black; font-size: 17px; margin: 0% 0% 1% 0%; font-weight: bold;"> Factor de potencia medio
+            </p>
+            <div style="position: relative;">
+                <p class="formula-dividendo"> {{dataInvoice.totalLecturaActivaAjustada | number:'1.2-2':'en-US'}} </p>
+                <p class="formula-divisor1"> {{dataInvoice.totalLecturaActivaAjustada  | number:'1.2-2':'en-US'}} <sup>2</sup> </p>
+                <p class="mas"> + </p>
+                <p class="formula-divisor2"> {{dataInvoice.totalLecturaReactivaAjustada | number:'1.2-2':'en-US'}} <sup>2</sup> = </p>
+                <p class="resultado-factor"> {{ dataInvoice.FPTotal * 100 | number:'1.2-2':'en-US'}} % </p>
+                <img class="img-formula" src="assets/raiz.svg">
+    
+            </div>
+            <p style="    color: black; font-size: 17px; margin: 2% 0% 1% 0%; font-weight: bold;"> Penalización reactiva
+            </p>
+            <p class="formula-penalidad" > {{dataInvoice.PCFRTotal * 100 | number:'1.2-2':'en-US'}}% = 
+                <span class="resultado-penalidad" *ngIf="dataInvoice.cargo; else sinPenalizacion">
+                    L {{ dataInvoice.cargo[dataInvoice.cargo.length -2].valorAjustado | number:'1.2-2':'en-US'}}
+                </span> 
+                <ng-template #sinPenalizacion>
+                    <span class="resultado-penalidad">
+                        L {{ 0 }}
+                    </span> 
+    
+                </ng-template>
+                
+            </p>
+                
+            <div style="background-color:  #969696; text-align: center;">
+                <h6>Distribucion de cargos por consumo energetico</h6>
+            </div>
+    
+                <div class="contenedor-cliente-regulado">
+                    
+                    <div>
+                        <p *ngFor="let data of dataInvoice.cargo" class="datos-cliente-regulado"> 
+                            <span *ngIf="data.nombre != 'Total'">
+                                {{data.nombre}}
+                            </span>
+                            
+                        </p>
             
+                    </div>
+                    <div>
+                        <p *ngFor="let data of dataInvoice.cargo" class="datos-cliente-regulado" style="justify-content: right;">
+                            <span *ngIf="data.nombre != 'Total'">
+                                L {{data.valorAjustado  | number:'1.2-2':'en-US'}} 
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <div class="contenedor-cliente-regulado" style="background-color: #b9b9b9; font-weight: bold;">
+                    <div>
+                        <p class="datos-cliente-regulado"> 
+                            <span>
+                                Total
+                            </span>
+                            
+                        </p>
+            
+                    </div>
+                    <div>
+                        <p class="datos-cliente-regulado" style="justify-content: right;">
+                            <span>
+                            L {{dataInvoice.cargo[dataInvoice.cargo.length -1].valorAjustado   | number:'1.2-2':'en-US'}}
+    
+                            </span>
+                        </p>
+                    </div>
+    
+                </div>
         </div>
+    
     </div>
     
-    <div class="matriz">
+    <div class="historico-consumo-container">
+    
         <div style="background-color: #b9b9b9; margin: 1% 3% 1% 3%;">
-            <fusioncharts width="100%" height="100%" type="Pie2d" [dataSource]="pieGraph">
+            <fusioncharts width="100%" height="100%" type="scrollstackedcolumn2d" [dataSource]="dataSource">
             </fusioncharts>
         </div>
-        <!-- <div style="background-color: rgb(255 255 255);
-        position: absolute;
-        height: 50px;
-        width: 370px;
-        bottom: 0;">
-            <span style="color: rgb(255 255 255);">.</span>
-        </div> -->
+        <div style="background-color: #b9b9b9; margin: 0% 3% 0% 3%;">
+            <p class="totales-historico">
+                <span> Promedio de consumo energía activa:</span>
+                <span> {{dataSource.promedioConsumo | number:'1.2-2':'en-US' }} kWh </span>
+            </p>
+            <!-- <p class="totales-historico">
+                <span> Promedio de consumo energia reactiva:</span>
+                <span> {{dataSource.promedioConsumo | number:'1.2-2':'en-US' }} kWh </span>
+            </p> -->
+        </div>
     </div>
-
-</div>
+        
+    </div>
+    
+    
+     
+    <div class="titulos" *ngIf="dataInvoice.cargo">
+        <h5>Origen de la energía</h5>
+    </div>  
+    
+    <div class="origen-container"  *ngIf="dataInvoice.cargo">
+    
+        <div class="origen-energia">
+            <div>
+                <table class="origen-table" style="table-layout: fixed; width: 100%">
+                <thead>
+                  <tr>
+                    <th class="tg-ifil">Origen</th>
+                    <th class="tg-ifil">Energía</th>
+                    <th class="tg-ifil">Precio de la energía</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="tg-g6p1">Generación solar</td>
+                    <td class="tg-8jgo">{{dataInvoice.CEFTotal / dataInvoice.PBE  | number:'1.2-2':'en-US' }} kWh</td>
+                    <td class="tg-8jgo">L {{dataInvoice.CEFTotal | number:'1.2-2':'en-US' }}</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-g6p1">Energía EEH</td>
+                    <td class="tg-8jgo">{{ dataInvoice.totalLecturaActivaAjustada  | number:'1.2-2':'en-US' }} kWh</td>
+                    <td class="tg-8jgo">L {{ dataInvoice.cargo[dataInvoice.cargo.length - 1].valorAjustado -  dataInvoice.CEFTotal| number:'1.2-2':'en-US' }}</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-g6p1">Total Consumo</td>
+                    <td class="tg-8jgo totales-tablas">{{ dataInvoice.totalLecturaActivaAjustada  +  (dataInvoice.CEFTotal / dataInvoice.PBE) | number:'1.2-2':'en-US' }} kWh</td>
+                    <td class="tg-8jgo totales-tablas">L {{ dataInvoice.cargo[dataInvoice.cargo.length - 1].valorAjustado  | number:'1.2-2':'en-US'}}</td>
+                  </tr>
+                </tbody>
+                </table>
+                
+            </div>
+        </div>
+        
+        <div class="matriz">
+            <div style="background-color: #b9b9b9; margin: 1% 3% 1% 3%;">
+                <fusioncharts width="100%" height="100%" type="Pie2d" [dataSource]="pieGraph">
+                </fusioncharts>
+            </div>
+            <!-- <div style="background-color: rgb(255 255 255);
+            position: absolute;
+            height: 50px;
+            width: 370px;
+            bottom: 0;">
+                <span style="color: rgb(255 255 255);">.</span>
+            </div> -->
+        </div>
+    
+    </div>
+    
 </div>
