--- a/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-cargos-eeh/modal-cargos-eeh.component.html
@@ -44,10 +44,10 @@
         <div nz-row>
           <div nz-col>
             <div *ngIf="!IsDisable ; else enableClients">
-              <button nz-button [nzType]="'primary'" (click)="filterCargos(false, true)"><span>Mostrar desabilitados</span></button>
+              <button nz-button [nzType]="'primary'" (click)="filterCargos(false, true)"><span nz-icon nzType="filter" nzTheme="outline"></span><span>Mostrar desabilitados</span></button>
             </div>
             <ng-template #enableClients>
-              <button nz-button [nzType]="'primary'" (click)="filterCargos(true, true)"><span>Mostrar Habilitados</span></button>
+              <button nz-button [nzType]="'primary'" (click)="filterCargos(true, true)"><span nz-icon nzType="filter" nzTheme="outline"></span><span>Mostrar Habilitados</span></button>
             </ng-template>
         
           </div>
