--- a/src/app/modules/menu-layout/components/rates/modal-parameters/modal-parameters.component.html
+++ b/src/app/modules/menu-layout/components/rates/modal-parameters/modal-parameters.component.html
@@ -86,10 +86,10 @@
     <div nz-row>
         <div nz-col>
           <div *ngIf="!paramIsDisable ; else enableClients">
-            <button nz-button [nzType]="'primary'" (click)="GetParams(false, true)"><span>Mostrar desabilitados</span></button>
+            <button nz-button [nzType]="'primary'" (click)="GetParams(false, true)"><span nz-icon nzType="filter" nzTheme="outline"></span><span>Mostrar desabilitados</span></button>
           </div>
           <ng-template #enableClients>
-            <button nz-button [nzType]="'primary'" (click)="GetParams(true, true)"><span>Mostrar Habilitados</span></button>
+            <button nz-button [nzType]="'primary'" (click)="GetParams(true, true)"><span nz-icon nzType="filter" nzTheme="outline"></span><span>Mostrar Habilitados</span></button>
           </ng-template>
       
         </div>
