--- a/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
@@ -3,7 +3,7 @@
     <button nz-button nzSize="small" nzType="primary" (click)="showModal()"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
 </div>
 <ng-template #Guardar>
-    <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Registro</span></button>
+    <button nz-button [nzType]="'primary'" (click)="showModal()"> <i nz-icon nzTheme="outline" nzType="plus"></i><span> nuevo</span>    </button>
 </ng-template>
 <nz-modal [(nzVisible)]="isVisible" nzTitle="Contrato" (nzOnCancel)="handleCancel()" (nzOnOk)="submitForm()" [nzStyle]="{ top: '5px' }">
     <ng-container *nzModalContent>
