--- a/src/app/modules/menu-layout/components/providers/submit-provider-modal/submit-provider-modal.component.html
+++ b/src/app/modules/menu-layout/components/providers/submit-provider-modal/submit-provider-modal.component.html
@@ -4,7 +4,7 @@
         <button nz-button [nzType]="'primary'"  (click)="showModal()"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
     </div>
     <ng-template #guardar>
-        <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Proveedor</span></button>
+        <button nz-button [nzType]="'primary'" (click)="showModal()"> <i nz-icon nzTheme="outline" nzType="plus"></i><span> nuevo</span></button>
     </ng-template>
 
     <nz-modal [(nzVisible)]="isVisible" nzTitle="Proveedor" (nzOnCancel)="handleCancel()" (nzOnOk)="submitForm()">
