--- a/src/app/modules/menu-layout/components/rates/modal-new-rate/modal-new-rate.component.html
+++ b/src/app/modules/menu-layout/components/rates/modal-new-rate/modal-new-rate.component.html
@@ -3,7 +3,7 @@
     <button class="edit" nz-button nzSize="small" nzType="primary" (click)="showModal()"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
 </div>
 <ng-template #Guardar>
-    <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nueva tarifa</span></button>
+    <button nz-button [nzType]="'primary'" (click)="showModal()"> <i nz-icon nzTheme="outline" nzType="plus"></i><span> nuevo</span></button>
 </ng-template>
 
 <nz-modal [(nzVisible)]="isVisible" nzTitle="Tarifas Mensuales" (nzOnCancel)="handleCancel()" (nzOnOk)="submitForm()">
